fix logo placement in formakademisk. tweak master theme to fix some issues with bg image placement vs bg gradient placement and prevent occational overflow issue on .pkp_site_name_wrapper

--- a/formakademisk/styles/head.less
+++ b/formakademisk/styles/head.less
@@ -1,10 +1,12 @@
 /*formakademisk overrides master*/
 .pkp_structure_head .pkp_head_wrapper .pkp_site_name_wrapper {
     background-image: url("/plugins/themes/formakademisk/svg/formakademisk-logo-phone-fat-small-text.svg");
+    background-position: left 4rem center;
 }
 @media (min-width: @screen-desktop) {
     .pkp_structure_head .pkp_head_wrapper .pkp_site_name_wrapper {
         background-image: url("/plugins/themes/formakademisk/svg/formakademisk-logo-opt.svg");
+        background-position: left center;
    }
 }
 .pkp_structure_head .pkp_head_wrapper .pkp_site_name_wrapper .pkp_site_name a > h1 {
